# ogc-api-processes-with-zoo

./: .gitignore  404.html  README.md  a  codemeta.json  index.html  mkdocs.yml  skaffold.yaml  wait-for-it.sh
.github/workflows/: build.yaml  docs.yml
app/water-bodies-detection/: index.html
coder-manifests/: coder.yaml
containers/: execute_request.json
containers/aaa/bbb/: Dockerfile
containers/hello-world/: Dockerfile
containers/ogc-api-processes-client/: Dockerfile  README.md  execute.json  execute.yaml  pyproject.toml
containers/ogc-api-processes-client/src/ogc_api_processes_client/: main.py  utils.py
containers/ogc_api_processes_client/: index.html
containers/scope/: index.html
containers/stac-client/: Dockerfile
cwl-cli/: ogc-api-processes-client-cli.cwl
cwl-cli/ogc-api-processes-client/: index.html
cwl-cli/prepare-execute/: index.html
cwl-cli/scope/: index.html
cwl-workflow/eoap-api/: index.html
cwl-workflow/run-workflow/: index.html
cwl-workflow/scope/: index.html
cwl-workflows/: eoap-api-cli-copy.cwl  eoap-api-cli.cwl  eoap-api-cql2json.yaml  eoap-api.cwl  eoap-api.yaml  params.yaml
deploy-application/: index.html
describe-process/: index.html
docs/: deploy-application.md  describe-process.md  execute-monitor-process.md  execution-scenario.md  get-process-results.md  index.md  installation.md  list-processes.md
docs/app/: water-bodies-detection.md
docs/assets/: swagger.json
docs/containers/: build_container_ogc_api_processes_client.sh  ogc_api_processes_client.md  scope.md
docs/cwl-cli/: ogc-api-processes-client.md  prepare-execute-request-cli.cwl  prepare-execute.md  scope.md
docs/cwl-workflow/: eoap-api.md  run-workflow.md  scope.md
docs/reference/: ogc-api-processes-openapi.md  ogc-api-processes.md  zoo-project.md
execute-monitor-process/: index.html
execution-scenario/: index.html
installation/: index.html
list-processes/: index.html
practice-labs/: 00 - checking the setup.ipynb  01 - Deploy an application package.ipynb  01-Deploy-an-application-package.ipynb  02 - List the deployed processes.ipynb  02 - wip bis.ipynb  02 - wip.ipynb  02-List-the-deployed-processes.ipynb  03 - Describe the process.ipynb  03-Describe-the-process.ipynb  04 - Execute the process and monitor its job execution.ipynb  04 - Execute the process and monitor the execution.ipynb.ipynb  04-Execute-the-process-and-monitor-its-job-execution.ipynb  execute-monitor-process.md  s3.ipynb
reference/ogc-api-processes/: index.html
reference/ogc-api-processes-openapi/: index.html  swagger-a945073d.html
reference/zoo-project/: index.html
search/: search_index.json
